--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 #Django
 dmlib/
+datalib/
 media/
 migrations/
 
@@ -26,3 +27,5 @@ RDF/tools/3_0_0/xml/
 s3m.wpr
 s3m.wpu
 .Rproj.user
+S3Model.sublime-project
+S3Model.sublime-workspace
