--- a/.gitignore
+++ b/.gitignore
@@ -5,21 +5,10 @@
 *.zip
 *.sh
 
-#Django
-dmlib/
-datalib/
-media/
-migrations/
-
+mindmaps/*
 
 #Sphinx
 build/
-
-# RDF tools ignores
-RDF/tools/3_0_0/dm/
-RDF/tools/3_0_0/rdf/
-RDF/tools/3_0_0/rm/
-RDF/tools/3_0_0/xml/
 
 
 # project files
