--- a/s3m_environment.yml
+++ b/s3m_environment.yml
@@ -117,11 +117,24 @@ dependencies:
   - zope=1.0=py37_1
   - zope.interface=4.5.0=py37h14c3975_0
   - pip:
+    - antlr4-python3-runtime==4.7.1
+    - chardet==3.0.4
     - cuid==0.3
     - exrex==0.10.5
     - isodate==0.6.0
+    - jsonasobj==1.2.1
+    - pycountry==18.5.26
+    - pyjsg==0.9.0
     - pyparsing==2.2.0
     - pyre-check==0.0.14
+    - pyshexc==0.5.1
     - rdflib==4.2.2
+    - rdflib-jsonld==0.4.0
+    - requests==2.20.0
+    - shexjsg==0.5.1
+    - sparql-slurper==0.1.3
+    - sparqlwrapper==1.8.2
+    - urllib3==1.24
     - validator-collection==1.2.0
+
 
