--- a/s3m_environment.yml
+++ b/s3m_environment.yml
@@ -4,6 +4,7 @@ channels:
   - defaults
 dependencies:
   - dbus=1.13.0=h3a4f0e9_0
+  - entrypoints=0.2.3=py37_2
   - expat=2.2.5=hfc679d8_2
   - fontconfig=2.13.1=h65d0f4c_0
   - freetype=2.9.1=h6debe1e_4
@@ -11,7 +12,9 @@ dependencies:
   - glib=2.55.0=h464dc38_2
   - gst-plugins-base=1.12.5=hde13a9d_0
   - gstreamer=1.12.5=h61a6719_0
+  - ipython=6.5.0=py37_0
   - ipywidgets=7.4.2=py_0
+  - jedi=0.12.1=py37_0
   - jpeg=9c=h470a237_1
   - jupyter=1.0.0=py_1
   - jupyter_console=5.2.0=py37_1
@@ -20,12 +23,20 @@ dependencies:
   - libuuid=2.32.1=h470a237_2
   - libxcb=1.13=h470a237_2
   - pcre=8.41=hfc679d8_3
+  - pexpect=4.6.0=py37_0
+  - pickleshare=0.7.4=py37_0
   - pthread-stubs=0.4=h470a237_1
+  - ptyprocess=0.6.0=py37_0
+  - pyopenssl=18.0.0=py37_0
   - pyqt=5.6.0=py37h8210e8a_7
   - qt=5.6.2=hf70d934_9
   - qtconsole=4.4.1=py37_1
   - rise=5.4.1=py37_0
+  - setuptools=40.2.0=py37_0
   - sip=4.18.1=py37hfc679d8_0
+  - six=1.11.0=py37_1
+  - terminado=0.8.1=py37_1
+  - traitlets=4.3.2=py37_0
   - widgetsnbextension=3.4.1=py37_0
   - xorg-libxau=1.0.8=h470a237_6
   - xorg-libxdmcp=1.1.2=h470a237_7
@@ -41,7 +52,6 @@ dependencies:
   - constantly=15.1.0=py37h28b3542_0
   - cryptography=2.3.1=py37hc365091_0
   - decorator=4.3.0=py37_0
-  - entrypoints=0.2.3=py37_2
   - gmp=6.1.2=h6c8ec71_1
   - html5lib=1.0.1=py37_0
   - hyperlink=18.0.0=py37_0
@@ -49,9 +59,7 @@ dependencies:
   - idna=2.7=py37_0
   - incremental=17.5.0=py37_0
   - ipykernel=4.9.0=py37_0
-  - ipython=6.5.0=py37_0
   - ipython_genutils=0.2.0=py37_0
-  - jedi=0.12.1=py37_0
   - jinja2=2.10=py37_0
   - jsonschema=2.6.0=py37_0
   - jupyter_client=5.2.3=py37_0
@@ -78,18 +86,14 @@ dependencies:
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py37_1
   - parso=0.3.1=py37_0
-  - pexpect=4.6.0=py37_0
-  - pickleshare=0.7.4=py37_0
   - pip=10.0.1=py37_0
   - prometheus_client=0.3.1=py37h28b3542_0
   - prompt_toolkit=1.0.15=py37_0
-  - ptyprocess=0.6.0=py37_0
   - pyasn1=0.4.4=py37h28b3542_0
   - pyasn1-modules=0.2.2=py37_0
   - pycparser=2.18=py37_1
   - pycurl=7.43.0.2=py37hb7f436b_0
   - pygments=2.2.0=py37_0
-  - pyopenssl=18.0.0=py37_0
   - python=3.7.0=hc3d631a_0
   - python-dateutil=2.7.3=py37_0
   - pytz=2018.5=py37_0
@@ -97,15 +101,11 @@ dependencies:
   - readline=7.0=h7b6447c_5
   - send2trash=1.5.0=py37_0
   - service_identity=17.0.0=py37h28b3542_0
-  - setuptools=40.2.0=py37_0
   - simplegeneric=0.8.1=py37_2
-  - six=1.11.0=py37_1
   - sqlite=3.24.0=h84994c4_0
-  - terminado=0.8.1=py37_1
   - testpath=0.3.1=py37_0
   - tk=8.6.8=hbc83047_0
   - tornado=5.1=py37h14c3975_0
-  - traitlets=4.3.2=py37_0
   - twisted=18.7.0=py37h14c3975_1
   - wcwidth=0.1.7=py37_0
   - webencodings=0.5.1=py37_1
@@ -120,9 +120,16 @@ dependencies:
     - antlr4-python3-runtime==4.7.1
     - chardet==3.0.4
     - cuid==0.3
+    - cycler==0.10.0
     - exrex==0.10.5
     - isodate==0.6.0
     - jsonasobj==1.2.1
+    - jupyterthemes==0.19.6
+    - kiwisolver==1.0.1
+    - lesscpy==0.13.0
+    - matplotlib==3.0.1
+    - numpy==1.15.3
+    - ply==3.11
     - pycountry==18.5.26
     - pyjsg==0.9.0
     - pyparsing==2.2.0
