--- a/s3m_environment.yml
+++ b/s3m_environment.yml
@@ -1,78 +1,92 @@
 name: S3Model
 channels:
-  - conda-forge
   - defaults
 dependencies:
-  - attrs=18.2.0=py_0
-  - backcall=0.1.0=py_0
-  - bleach=3.0.2=py_0
-  - bzip2=1.0.6=h470a237_2
-  - decorator=4.3.0=py_0
-  - entrypoints=0.2.3=py37_1002
-  - gmp=6.1.2=hfc679d8_0
-  - icu=58.2=hfc679d8_0
-  - ipykernel=5.1.0=pyh24bf2e0_0
-  - ipython=7.1.1=py37h24bf2e0_1000
-  - ipython_genutils=0.2.0=py_1
-  - jedi=0.13.1=py37_1000
-  - jinja2=2.10=py_1
-  - jsonschema=3.0.0a3=py37_1000
-  - jupyter_client=5.2.3=py_1
-  - jupyter_core=4.4.0=py_0
-  - jupyterlab=0.35.4=py37_0
-  - jupyterlab_server=0.2.0=py_0
-  - libffi=3.2.1=hfc679d8_5
-  - libiconv=1.15=h470a237_3
-  - libsodium=1.0.16=h470a237_1
-  - libxml2=2.9.8=h422b904_5
-  - libxslt=1.1.32=h88dbc4e_2
-  - lxml=4.2.5=py37hc9114bc_0
-  - markupsafe=1.1.0=py37h470a237_0
-  - mistune=0.8.4=py37h470a237_0
-  - nbconvert=5.3.1=py_1
-  - nbformat=4.4.0=py_1
-  - ncurses=6.1=hfc679d8_1
-  - notebook=5.7.0=py37_1000
-  - pandoc=2.3.1=0
-  - pandocfilters=1.4.2=py_1
-  - parso=0.3.1=py_0
-  - pexpect=4.6.0=py37_1000
-  - pickleshare=0.7.5=py37_1000
-  - prometheus_client=0.4.2=py_0
-  - prompt_toolkit=2.0.7=py_0
-  - ptyprocess=0.6.0=py37_1000
-  - pygments=2.2.0=py_1
-  - pyrsistent=0.14.5=py37h470a237_1
-  - python-dateutil=2.7.5=py_0
-  - pyzmq=17.1.2=py37hae99301_1
-  - readline=7.0=haf1bffa_1
-  - send2trash=1.5.0=py_0
-  - setuptools=40.5.0=py37_0
-  - six=1.11.0=py37_1001
-  - sqlite=3.25.3=hb1c47c0_0
-  - terminado=0.8.1=py37_1001
-  - testpath=0.4.2=py37_1000
-  - tk=8.6.8=ha92aebf_0
-  - tornado=5.1.1=py37h470a237_0
-  - traitlets=4.3.2=py37_1000
-  - wcwidth=0.1.7=py_1
-  - webencodings=0.5.1=py_1
-  - wheel=0.32.2=py37_0
-  - xmltodict=0.11.0=py_1
-  - xz=5.2.4=h470a237_1
-  - zeromq=4.2.5=hfc679d8_6
-  - zlib=1.2.11=h470a237_3
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.10.15=py37_0
+  - attrs=19.1.0=py37_1
+  - backcall=0.1.0=py37_0
+  - bleach=3.1.0=py37_0
+  - bzip2=1.0.6=h14c3975_5
+  - ca-certificates=2019.1.23=0
+  - certifi=2019.3.9=py37_0
+  - decorator=4.4.0=py37_1
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py37_0
+  - gmp=6.1.2=h6c8ec71_1
+  - icu=58.2=h9c2bf20_1
+  - ipykernel=5.1.0=py37h39e3cac_0
+  - ipython=7.5.0=py37h39e3cac_0
+  - ipython_genutils=0.2.0=py37_0
+  - jedi=0.13.3=py37_0
+  - jinja2=2.10.1=py37_0
+  - jsonschema=3.0.1=py37_0
+  - jupyter_client=5.2.4=py37_0
+  - jupyter_core=4.4.0=py37_0
+  - jupyterlab=0.35.5=py37hf63ae98_0
+  - jupyterlab_server=0.2.0=py37_0
+  - libedit=3.1.20181209=hc058e9b_0
+  - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=8.2.0=hdf63c60_1
+  - libiconv=1.15=h63c8f33_5
+  - libsodium=1.0.16=h1bed415_0
   - libstdcxx-ng=8.2.0=hdf63c60_1
+  - libxml2=2.9.9=he19cac6_0
+  - libxslt=1.1.33=h7d1a2b0_0
+  - lxml=4.3.3=py37hefd8a0e_0
+  - markupsafe=1.1.1=py37h7b6447c_0
+  - mistune=0.8.4=py37h7b6447c_0
+  - nbconvert=5.5.0=py_0
+  - nbformat=4.4.0=py37_0
+  - ncurses=6.1=he6710b0_1
+  - notebook=5.7.8=py37_0
   - openssl=1.1.1=h7b6447c_0
-  - pip=18.1=py37_0
-  - python=3.7.1=h0371630_3
-  - pytz=2018.7=py37_0
+  - pandoc=2.2.3.2=0
+  - pandocfilters=1.4.2=py37_1
+  - parso=0.4.0=py_0
+  - pexpect=4.7.0=py37_0
+  - pickleshare=0.7.5=py37_0
+  - pip=19.1.1=py37_0
+  - prometheus_client=0.6.0=py37_0
+  - prompt_toolkit=2.0.9=py37_0
+  - ptyprocess=0.6.0=py37_0
+  - pygments=2.4.0=py_0
+  - pyrsistent=0.14.11=py37h7b6447c_0
+  - python=3.7.3=h0371630_0
+  - python-dateutil=2.8.0=py37_0
+  - pytz=2019.1=py_0
+  - pyzmq=18.0.0=py37he6710b0_0
+  - readline=7.0=h7b6447c_5
+  - send2trash=1.5.0=py37_0
+  - setuptools=41.0.1=py37_0
+  - six=1.12.0=py37_0
+  - sqlite=3.28.0=h7b6447c_0
+  - terminado=0.8.2=py37_0
+  - testpath=0.4.2=py37_0
+  - tk=8.6.8=hbc83047_0
+  - tornado=6.0.2=py37h7b6447c_0
+  - traitlets=4.3.2=py37_0
+  - wcwidth=0.1.7=py37_0
+  - webencodings=0.5.1=py37_1
+  - wheel=0.33.4=py37_0
+  - xmltodict=0.12.0=py_0
+  - xz=5.2.4=h14c3975_4
+  - zeromq=4.3.1=he6710b0_3
+  - zlib=1.2.11=h7b6447c_3
   - pip:
+    - alabaster==0.7.12
+    - babel==2.6.0
+    - chardet==3.0.4
     - cuid==0.3
+    - docutils==0.14
     - exrex==0.10.5
+    - idna==2.7
+    - imagesize==1.1.0
+    - packaging==18.0
+    - pyparsing==2.3.0
+    - requests==2.20.1
+    - snowballstemmer==1.2.1
+    - sphinx==1.8.2
+    - sphinx-rtd-theme==0.4.2
+    - sphinxcontrib-websupport==1.1.0
+    - urllib3==1.24.1
     - validator-collection==1.2.0
-
 
