--- a/requirements.txt
+++ b/requirements.txt
@@ -57,12 +57,14 @@ sphinxcontrib-htmlhelp==1.0.2
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
+style==1.1.0
 terminado==0.8.1
 testpath==0.4.2
 tornado==5.1.1
 tqdm==4.28.1
 traitlets==4.3.2
 twine==1.12.1
+update==0.0.1
 urllib3==1.25.3
 validator-collection==1.2.0
 wcwidth==0.1.7
