--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,54 @@
 alabaster==0.7.12
-attrs==18.2.0
+attrs==19.1.0
 Babel==2.7.0
 backcall==0.1.0
 bleach==3.0.2
-certifi==2018.10.15
+certifi==2019.6.16
 chardet==3.0.4
 cuid==0.3
-decorator==4.3.0
+decorator==4.4.0
+defusedxml==0.6.0
 docutils==0.14
-entrypoints==0.2.3
+entrypoints==0.3
 exrex==0.10.5
 idna==2.8
 imagesize==1.1.0
-ipykernel==5.1.0
-ipython==7.1.1
+ipykernel==5.1.1
+ipython==7.5.0
 ipython-genutils==0.2.0
-jedi==0.13.1
-Jinja2==2.10
-jsonschema==3.0.0a3
-jupyter-client==5.2.3
+jedi==0.13.3
+Jinja2==2.10.1
+jsonschema==3.0.1
+jupyter-client==5.2.4
 jupyter-core==4.4.0
-jupyterlab==0.35.4
+jupyterlab==0.35.5
 jupyterlab-server==0.2.0
-lxml==4.2.5
-MarkupSafe==1.1.0
+lxml==4.3.3
+MarkupSafe==1.1.1
 mistune==0.8.4
-nbconvert==5.3.1
+nbconvert==5.5.0
 nbformat==4.4.0
-notebook==5.7.0
+notebook==5.7.8
 packaging==19.0
 pandocfilters==1.4.2
-parso==0.3.1
-pexpect==4.6.0
+parso==0.4.0
+pexpect==4.7.0
 pickleshare==0.7.5
 pkginfo==1.4.2
-prometheus-client==0.4.2
-prompt-toolkit==2.0.7
+prometheus-client==0.6.0
+prompt-toolkit==2.0.9
 ptyprocess==0.6.0
 Pygments==2.2.0
 pyparsing==2.4.0
-pyrsistent==0.14.5
-python-dateutil==2.7.5
-pytz==2018.7
-pyzmq==17.1.2
+pyrsistent==0.14.11
+python-dateutil==2.8.0
+pytz==2019.1
+pyzmq==18.0.0
 readme-renderer==24.0
 requests==2.22.0
 requests-toolbelt==0.8.0
 Send2Trash==1.5.0
-six==1.11.0
+six==1.12.0
 snowballstemmer==1.2.1
 Sphinx==2.0.1
 sphinx-rtd-theme==0.4.3
@@ -58,9 +59,9 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
 style==1.1.0
-terminado==0.8.1
+terminado==0.8.2
 testpath==0.4.2
-tornado==5.1.1
+tornado==6.0.2
 tqdm==4.28.1
 traitlets==4.3.2
 twine==1.12.1
@@ -69,4 +70,4 @@ urllib3==1.25.3
 validator-collection==1.2.0
 wcwidth==0.1.7
 webencodings==0.5.1
-xmltodict==0.11.0
+xmltodict==0.12.0
