--- a/s3m_environment.yml
+++ b/s3m_environment.yml
@@ -6,14 +6,14 @@ dependencies:
   - backcall=0.1.0=py37_0
   - bleach=3.1.0=py37_0
   - bzip2=1.0.6=h14c3975_5
-  - ca-certificates=2019.1.23=0
-  - certifi=2019.3.9=py37_0
+  - ca-certificates=2019.5.15=0
+  - certifi=2019.6.16=py37_0
   - decorator=4.4.0=py37_1
   - defusedxml=0.6.0=py_0
   - entrypoints=0.3=py37_0
   - gmp=6.1.2=h6c8ec71_1
   - icu=58.2=h9c2bf20_1
-  - ipykernel=5.1.0=py37h39e3cac_0
+  - ipykernel=5.1.1=py37h39e3cac_0
   - ipython=7.5.0=py37h39e3cac_0
   - ipython_genutils=0.2.0=py37_0
   - jedi=0.13.3=py37_0
@@ -25,11 +25,11 @@ dependencies:
   - jupyterlab_server=0.2.0=py37_0
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=8.2.0=hdf63c60_1
+  - libgcc-ng=9.1.0=hdf63c60_0
   - libiconv=1.15=h63c8f33_5
   - libsodium=1.0.16=h1bed415_0
-  - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libxml2=2.9.9=he19cac6_0
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libxml2=2.9.9=hea5a465_1
   - libxslt=1.1.33=h7d1a2b0_0
   - lxml=4.3.3=py37hefd8a0e_0
   - markupsafe=1.1.1=py37h7b6447c_0
@@ -48,7 +48,7 @@ dependencies:
   - prometheus_client=0.6.0=py37_0
   - prompt_toolkit=2.0.9=py37_0
   - ptyprocess=0.6.0=py37_0
-  - pygments=2.4.0=py_0
+  - pygments=2.4.2=py_0
   - pyrsistent=0.14.11=py37h7b6447c_0
   - python=3.7.3=h0371630_0
   - python-dateutil=2.8.0=py37_0
@@ -73,20 +73,27 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - pip:
     - alabaster==0.7.12
-    - babel==2.6.0
+    - babel==2.7.0
     - chardet==3.0.4
     - cuid==0.3
-    - docutils==0.14
     - exrex==0.10.5
-    - idna==2.7
+    - idna==2.8
     - imagesize==1.1.0
-    - packaging==18.0
-    - pyparsing==2.3.0
-    - requests==2.20.1
+    - packaging==19.0
+    - pyparsing==2.4.0
+    - requests==2.22.0
     - snowballstemmer==1.2.1
-    - sphinx==1.8.2
-    - sphinx-rtd-theme==0.4.2
-    - sphinxcontrib-websupport==1.1.0
-    - urllib3==1.24.1
+    - sphinx==2.0.1
+    - sphinx-rtd-theme==0.4.3
+    - sphinxcontrib-applehelp==1.0.1
+    - sphinxcontrib-devhelp==1.0.1
+    - sphinxcontrib-htmlhelp==1.0.2
+    - sphinxcontrib-jsmath==1.0.1
+    - sphinxcontrib-qthelp==1.0.2
+    - sphinxcontrib-serializinghtml==1.1.3
+    - style==1.1.0
+    - update==0.0.1
+    - urllib3==1.25.3
     - validator-collection==1.2.0
+prefix: /home/tim/anaconda3/envs/S3Model
 
